Fix [Monitor Workflows] Missing padding in graph view details panel

--- a/src/components/Details/details.scss
+++ b/src/components/Details/details.scss
@@ -190,6 +190,10 @@
           min-width: 40px;
           padding: 0;
           border-radius: 50%;
+
+          & > * {
+            margin: 0;
+          }
         }
       }
     }
